# official-django-poll-application

./: LICENSE  README.md  db.sqlite3  setup.cfg
mysite/: settings.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/polls/: detail.html  index.html  results.html
